PLFM-7719: Include the snapshot timestamp